@@ -27,19 +27,6 @@ AC_LANG([C++])
 dnl ************************** Libtool initialization *************************
 LT_INIT
 
-dnl ********************************* Modules *********************************
-AC_ARG_WITH([proj-cflags],
-  [AS_HELP_STRING([--with-proj-cflags], [CFLAGS for the PROJ.4 headers])],
-  [if test "$withval" != ""; then PROJ_CFLAGS="$withval"; else PROJ_CFLAGS=""; fi],
-  [PROJ_CFLAGS='-DPROJ4'])
-AC_SUBST([PROJ_CFLAGS])
-
-AC_ARG_WITH([proj-libs],
-  [AS_HELP_STRING([--with-proj-libs], [LIBS for the PROJ.4 libraries])],
-  [PROJ_LIBS="$withval"],
-  [PROJ_LIBS='-lproj'])
-AC_SUBST([PROJ_LIBS])
-
 dnl ****************************** Detect libm *******************************
 
 AC_CHECK_LIB(m,floor,LIBM=-lm)
@@ -62,7 +49,6 @@ dnl ********************************* Summary *********************************
 echo
 echo "Configuration summary for $PACKAGE $VERSION:"
 echo "  - Host:                  ${host}"
-echo "  - PROJ flags:            $PROJ_CFLAGS $PROJ_LIBS"
 echo
 
 AC_CONFIG_FILES([Makefile contrib/Makefile shapelib.pc])
