@@ -68,9 +68,8 @@ Shapelib is hosted at
 <a href="http://shapelib.maptools.org">shapelib.maptools.org</a>.   A mailing
 list for discussion of how to use shapelib, and announcing new releases 
 <a href="http://lists.maptools.org/mailman/listinfo/shapelib/">is 
-available</a>.  To only find out about new releases of Shapelib select the 
-"<i>Subscribe to new releases</i>" option from the link at 
-<a href="http://freshmeat.net/projects/shapelib/">Freshmeat</a>.<p>
+available</a>. To get notification of new releases of Shapelib <i>subscribe</i> to 
+the project mailing list at https://lists.osgeo.org/pipermail/shapelib/.<p>
 
 <h2>Credits</h2>
 
