@@ -25,7 +25,6 @@ This guide was created by <a href="http://www.consultoria.eti.br" target="_show"
 			<li><a href="#shpcentrd">shpcentrd</a></li>
 			<li><a href="#shpdxf">shpdxf</a></li>
 			<li><a href="#shpfix">shpfix</a></li>
-			<li><a href="#shpproj">shpproj</a></li>
 		</ul>
 	</li>
 
@@ -288,64 +287,6 @@ as happens from time to time.
 <br>
 <font face="courier">$ shpfix broken fixed</font>
 <br>
-<hr>
-
-<h2><a name="shpproj">shpproj</a></h2>
-<b>Purpose</b>: Reproject Shapefiles using PROJ.4
-<br>
-<b>Usage</b>: <font face="courier">shpproj shp_file new_shp ( -i=in_proj_file | -i="in_params" | -i=geographic ) ( -o=out_info_file | -o="out_params" | -o=geographic ) </font>
-<br>
-<ul>
-	<li><b>param1</b>: explain</li>
-	<li><b>param2</b>: explain</li>
-</ul>
-<p>
-
-<b>INPUT</b><br>
-  Input can come from one of three sources.  A projection parameter file, 
-  directly through parameters or geographic. If the shapefile has an associated
-  prj file, name the same as the shapefile but ending in ".prj" it will be used
-  by default ignoring all other parameters.  If input is omitted it defaults to
-  geographic, unless the default prj file exists.<p>
-
-<b>OUTPUT</b><br>
-  Output can come from one of three sources.  A projection parameter file,
-  directly through parameters or geographic.  If output is omitted it defaults
-  to geographic.<p>
-
-<b>PROJECTION PARAMETER FILE</b><br>
-  This file MUST end with the extension ".prj".  It has the form of one
-  projection parameter per line.  Parameters can be in any order.  The
-  projection parameters are those used to define a PROJ.4 projection.<p>
-
-<b>PROJECTION PARAMETERS</b><br>
-  Are the same as used by proj and invproj.<p>
-<pre>
-  use      proj -lP   to see available projections
-	   proj -lu   to see available units
-	   proj -le   to see available ellipsoid
-</pre>
-
-Or visit the PROJ.4 web page at <a href="http://www.remotesensing.org/proj">http://www.remotesensing.org/proj</a> for more details.<p>
-
-<p>
-
-<b>Example</b></br>
-
-the following example projects file rowtest to row3, moving data from Stateplane NAD83  zone 1002 to utm zone 16 in meters<p>
-
-<pre>
- 
-shpproj rowtest row -i="init=nad83:1002 units=us-ft" -o="proj=utm zone=16 units=m"
-
-shpproj rowtest row3 -o="proj=utm zone=18 units=m" -i="zone=16 proj=utm units=us-ft"
-
-shpproj rowtest row3 -o="proj=utm zone=18 units=m" 
-
-shpproj rowtest row3 -i=myfile.prj -o=geographic
-shpproj rowtest row3 -is=myfile.prj
-</pre>
-
 <hr>
 
 </body>
